# Assignment_PubMed

./: README.md  pyproject.toml
get_papers_list/: main.py
